# denetui

./: .gitignore  Cargo.toml  LICENSE.md  README.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs
src/: main.rs
tui/: .env.example  Cargo.toml
tui/src/: main.rs
