[package]
name = "denetui"
version = "0.1.3"
edition = "2024"
description = "Terminal UI for browsing top dev.to articles"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/denetui"
homepage = "https://github.com/yourusername/denetui"
readme = "README.md"
keywords = ["tui", "terminal", "devto", "news", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "denetui"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
tui-markdown = { version = "0.3", features = ["highlight-code"] }
dotenvy = "0.15"
