[package]
name = "denetui"
version = "0.1.4"
edition = "2024"
description = "Terminal UI for browsing top dev.to articles"
authors = ["Teemu Hynnä teemu.hynna@gmail.com"]
license = "MIT"
repository = "https://github.com/teolhyn/denetui"
readme = "../README.md"
keywords = ["cli", "devto", "news", "terminal", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "denetui"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
dotenvy = "0.15"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
tui-markdown = { version = "0.3", features = ["highlight-code"] }
